--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -24,6 +24,9 @@ const { title, description } = Astro.props;
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://MelissaSkywalkz.github.io/open-data-hub-se/" />
     <meta property="og:image" content="https://MelissaSkywalkz.github.io/open-data-hub-se/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@400;600;700;800&family=Red+Hat+Display:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
     <!-- All CSS moved below -->
   </head>
   <body>
