--- a/site/src/pages/community.astro
+++ b/site/src/pages/community.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 
 <Layout title="Community" description="Så fungerar communityn och forumet">
-  <h1>Välkommen till Open Data Hub SE</h1>
+  <h1>Välkommen till Open Data Orbit</h1>
   <p>
     Här samlas vi som vill lära oss, bygga och dela öppna data i Sverige. Communityn är öppen för alla – oavsett erfarenhet!
   </p>
