--- a/site/src/pages/rewards.astro
+++ b/site/src/pages/rewards.astro
@@ -7,7 +7,7 @@ import rewards from '../data/rewards.json';
 <Layout title="Rewards" description="Badges och incitament för contributions">
   <h1>Badges & Rewards</h1>
   <p>
-    I Open Data Hub SE kan du få badges för att bidra, hjälpa andra och vara aktiv i communityn.
+    I Open Data Orbit kan du få badges för att bidra, hjälpa andra och vara aktiv i communityn.
   </p>
 
   <div class="rewards-info">
